--- a/AC-iOS-Unit4-Week1-HW/Base.lproj/Main.storyboard
+++ b/AC-iOS-Unit4-Week1-HW/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="162" height="228"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kvx-kF-4gM">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_book_cover" translatesAutoresizingMaskIntoConstraints="NO" id="Kvx-kF-4gM">
                                                     <rect key="frame" x="0.0" y="-6" width="162" height="143"/>
                                                 </imageView>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="psR-tA-JRm">
@@ -106,7 +106,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6a8-d5-hH0">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="no_book_cover" translatesAutoresizingMaskIntoConstraints="NO" id="6a8-d5-hH0">
                                 <rect key="frame" x="0.0" y="64" width="320" height="199"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r2q-Az-fCb">
@@ -195,7 +195,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Bkd-Rb-ptQ">
                                 <rect key="frame" x="0.0" y="64" width="320" height="367"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="0.59265303940000003" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="a3L-rY-3fw">
                                     <size key="itemSize" width="117" height="169"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -210,7 +210,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="117" height="169"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Aj1-CO-iOl">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_book_cover" translatesAutoresizingMaskIntoConstraints="NO" id="Aj1-CO-iOl">
                                                     <rect key="frame" x="8" y="8" width="101" height="153"/>
                                                 </imageView>
                                             </subviews>
@@ -286,5 +286,6 @@
         <image name="icons8-bookmark-25" width="25" height="25"/>
         <image name="icons8-gears-25" width="25" height="25"/>
         <image name="icons8-trophy-30" width="30" height="30"/>
+        <image name="no_book_cover" width="200" height="248"/>
     </resources>
 </document>
