--- a/AC-iOS-Unit4-Week1-HW/Base.lproj/Main.storyboard
+++ b/AC-iOS-Unit4-Week1-HW/Base.lproj/Main.storyboard
@@ -29,16 +29,16 @@
                             </pickerView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JAb-ix-zjf">
                                 <rect key="frame" x="0.0" y="64" width="320" height="240"/>
-                                <color key="backgroundColor" red="0.50196081400000003" green="0.25098040700000002" blue="0.0" alpha="0.69865689210000004" colorSpace="calibratedRGB"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Qfe-XS-aAW">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Qfe-XS-aAW">
                                     <size key="itemSize" width="162" height="228"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ykE-aK-sw2" customClass="BestSellerCollectionViewCell" customModule="AC_iOS_Unit4_Week1_HW" customModuleProvider="target">
-                                        <rect key="frame" x="79" y="0.0" width="162" height="228"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BestSellersCell" id="ykE-aK-sw2" customClass="BestSellerCollectionViewCell" customModule="AC_iOS_Unit4_Week1_HW" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="6" width="162" height="228"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="162" height="228"/>
@@ -49,14 +49,12 @@
                                                 </imageView>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="psR-tA-JRm">
                                                     <rect key="frame" x="0.0" y="138" width="162" height="90"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textView>
                                             </subviews>
                                         </view>
-                                        <color key="backgroundColor" red="0.31787357230000002" green="0.1834836239" blue="0.073320263499999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstItem="psR-tA-JRm" firstAttribute="top" secondItem="Kvx-kF-4gM" secondAttribute="bottom" constant="1" id="A4w-Z7-Y8h"/>
                                             <constraint firstItem="Kvx-kF-4gM" firstAttribute="top" secondItem="ykE-aK-sw2" secondAttribute="topMargin" constant="-14" id="K4Q-jC-HtK"/>
@@ -91,6 +89,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Best Sellers" image="icons8-trophy-30" id="fcG-Iy-ntm"/>
                     <connections>
+                        <outlet property="collectionView" destination="JAb-ix-zjf" id="XVP-hR-UXB"/>
                         <outlet property="pickerView" destination="Uls-XI-TBQ" id="dBl-WO-6xi"/>
                     </connections>
                 </viewController>
